# bomberman

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install.sh  main.cpp  uninstall.sh
assets/: run.dae
assets/Animations/Hero/: run.dae
assets/Models/Bomb/: bomb.dae  bomb.mtl
assets/Models/Box/: box.mtl
assets/Models/DestructibleMeteorite/: destructibleMeteorite.mtl
assets/Models/Diglett/: diglett.mtl
assets/Models/EnemyBomber/: enemyBomber.mtl
assets/Models/Fossils/DomeFossil/: domeFossil.mtl
assets/Models/Fossils/HelixFossil/: helixFossil.mtl
assets/Models/Fuzzy/: fuzzy.mtl
assets/Models/Groudon/: groudon.mtl
assets/Models/Hero/: hero.dae
assets/Models/HolePlanet/: holePlanet.dae
assets/Models/Island/: island.mtl
assets/Models/Lapras/: lapras.mtl
assets/Models/Meteorite/: meteorite.mtl
assets/Models/OakTree/: oakTree.mtl
assets/Models/Perks/Damage/: damage.mtl
assets/Models/Pipe/: Pipe.mtl
assets/Models/Portal/: portal.mtl
assets/Models/RedGhost/: redGhost.mtl
assets/Models/RockPipe/: RockPipe.mtl
assets/Models/Sphere/: sphere.dae
assets/Models/Stadium/: stadium.mtl
assets/Models/StrengthBoulder/: strengthBoulder.mtl
assets/Models/Wall/: wall.dae  wall.mtl
assets/models/: simple.dae
assets/models/CloudMap/: CloudMap.mtl
assets/models/Diglett/: diglett.mtl
assets/models/Flame/: Flame.mtl
assets/models/Fuzzy/: Fuzzy.dae
assets/models/MarioWorld/: MarioWorld.mtl
assets/models/WarpPipe/: WarpPipe.mtl
assets/models/WarpPipeCorner/: WarpPipeCorner.mtl
assets/models/bee/: npc04_model.psk  npc04_modelout.dae  npc04_modelout.smd
assets/models/bigMeteor/: bigMeteor.mtl
assets/models/bomb/: bomb.dae
assets/models/box/: DolPowderbox.mtl
assets/models/cube/: cube.dae
assets/models/destructibleMeteorite/: Common.mtl
assets/models/green_wall/: mis_obj_reproblock_SD.mtl
assets/models/hero/: hero.dae
assets/models/island/: island.dae
assets/models/meteorite/: YoshiBoxBreakPlanet.dae
assets/models/player/: model.dae  player.dae
assets/models/portal/: portal.dae  test.dae
assets/models/scenery/: ground.dae  platform.dae  stone.dae  tree.dae  trunks.dae
assets/models/wall/: wall.dae
assets/objs/bomb/: bomb.mtl
assets/objs/box/: box.mtl
assets/objs/enemy/: enemy.mtl
assets/objs/explosion/: explosion.mtl
assets/objs/floor/: floor.mtl
assets/objs/island/: island.mtl
assets/objs/player/: player.mtl
assets/objs/tree/: tree.mtl
assets/objs/wall/: wall.mtl
assets/shaders/: 4.1.fs  4.1.vs  simple.fs  simple.vs
includes/: AEntity.hpp  AGame.hpp  AGameScene.hpp  AudioManager.hpp  Camera.hpp  Collider.hpp  Entity.hpp  GameEngine.hpp  GameLogic.hpp  GameRenderer.hpp  LevelOne.hpp  Mesh.hpp  Model.hpp  Player.hpp  ShaderProgram.hpp  Shape.hpp  Wall.hpp  header.hpp  nuklear_glfw_gl3.h
includes/GUI/: GUI.hpp
includes/bomberman/: BombermanGame.hpp  GUITools.hpp
includes/bomberman/cams/: ForestCam.hpp  MainMenuCam.hpp  Tools.hpp
includes/bomberman/entities/: Enemy.hpp  Player.hpp
includes/engine/: AGame.hpp  Animation.hpp  AudioManager.hpp  Camera.hpp  Collider.hpp  Engine.hpp  Entity.hpp  GameEngine.hpp  GameRenderer.hpp  Joint.hpp  Light.hpp  Mesh.hpp  Model.hpp  ShaderProgram.hpp  Skybox.hpp  header.hpp
includes/engine/GUI/: GUI.hpp
includes/game/: Bomberman.hpp  GUITools.hpp  Save.hpp
includes/game/cams/: ForestCam.hpp  MainMenuCam.hpp  Tools.hpp
includes/game/entities/: AEnemy.hpp  Bomb.hpp  Box.hpp  Damageable.hpp  Enemy.hpp  EnemyBasic.hpp  EnemyBomber.hpp  EnemyMelee.hpp  EnemyOFDT.hpp  EnemyPutBomb.hpp  EnemyRunAway.hpp  Explosion.hpp  Perk.hpp  Player.hpp  Portal.hpp
includes/game/scenes/: Credits.hpp  Desert.hpp  Forest.hpp  Load.hpp  MainMenu.hpp  Mario.hpp  Pokemon.hpp  SceneTools.hpp  Space.hpp  Volcano.hpp
includes/json/: json.hpp
includes/scenes/: BomberManGame.hpp  BombermanGame.hpp  FactoryCam.hpp  ForestCam.hpp  GUITools.hpp  Level01.hpp  Level01Cam.hpp  MainMenu.hpp  MainMenuCam.hpp
includes/scenes/cams/: FabCam.hpp  ForestCam.hpp  MainMenuCam.hpp
includes/scenes/entities/: Enemy.hpp  Player.hpp
srcs/: AEntity.cpp  AGame.cpp  AGameScene.cpp  AudioManager.cpp  Camera.cpp  Collider.cpp  Entity.cpp  GameEngine.cpp  GameLogic.cpp  GameRenderer.cpp  LevelOne.cpp  Mesh.cpp  Model.cpp  Player.cpp  README.md  ShaderProgram.cpp  Shape.cpp  Wall.cpp  main.cpp
srcs/GUI/: GUI.cpp
srcs/bomberman/: BombermanGame.cpp  GUITools.cpp  Save.cpp
srcs/bomberman/cams/: ForestCam.cpp  MainMenuCam.cpp  Tools.cpp
srcs/bomberman/entities/: Enemy.cpp  Player.cpp
srcs/cmutti/: Makefile  bomberman
srcs/cmutti/includes/: AudioManager.hpp  GameLogic.hpp  GameRenderer.hpp  GlfwGUI.hpp  MainGame.hpp
srcs/cmutti/srcs_main/: AudioManager.cpp  GameLogic.cpp  GameRenderer.cpp  GlfwGUI.cpp  MainGame.cpp
srcs/engine/: AGame.cpp  Animation.cpp  AudioManager.cpp  Camera.cpp  Collider.cpp  Entity.cpp  GameEngine.cpp  GameRenderer.cpp  Joint.cpp  Light.cpp  Mesh.cpp  Model.cpp  ShaderProgram.cpp  Skybox.cpp
srcs/engine/GUI/: GUI.cpp
srcs/engine/shaders/: 4.1.fs  4.1.vs  default.fs  default.vs  depthMap.fs  depthMap.vs  skybox.fs  skybox.vs
srcs/game/: Bomberman.cpp  GUITools.cpp  Save.cpp
srcs/game/cams/: ForestCam.cpp  MainMenuCam.cpp  Tools.cpp
srcs/game/entities/: AEnemy.cpp  Bomb.cpp  Box.cpp  Damageable.cpp  Enemy.cpp  EnemyBasic.cpp  EnemyBomber.cpp  EnemyMelee.cpp  EnemyOFDT.cpp  EnemyPutBomb.cpp  EnemyRunAway.cpp  Explosion.cpp  Perk.cpp  Player.cpp  Portal.cpp
srcs/game/scenes/: Credits.cpp  Desert.cpp  Forest.cpp  Load.cpp  MainMenu.cpp  Mario.cpp  Pokemon.cpp  SceneTools.cpp  Space.cpp  Volcano.cpp
srcs/nuklear/: Makefile
srcs/nuklear/includes/: main.hpp
srcs/nuklear/srcs/: main.cpp
srcs/scenes/: BomberManGame.cpp  BombermanGame.cpp  Factory.cpp  Factory.hpp  FactoryCam.cpp  ForestCam.cpp  GUITools.cpp  Level01.cpp  Level01Cam.cpp  MainMenu.cpp  MainMenuCam.cpp
srcs/scenes/cams/: FabCam.cpp  ForestCam.cpp  MainMenuCam.cpp
srcs/scenes/entities/: Enemy.cpp  Player.cpp
srcs/shaders/: 4.1.fs  4.1.vs
(+1 files in other folders)
